--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,10 @@
   </head>
 
   <body>
+    <!-- below flash is called from articles_controller.rb -->
+    <% flash.each do |name, msg| %>
+      <%= msg %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
