--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -14,7 +14,10 @@
             <tr>
                 <td><%= article.title %></td> 
                 <td><%= article.description%></td>
-                <td>Placeholder</td>
+
+                <td><%= link_to 'Show', article_path(article) %></td> 
+                 <!-- this will create your http link to delete -->
+                <td><%= link_to 'Delete', article_path(article), data: {turbo_method: :delete, turbo_confirm: "Are you sure?" } %></td> 
             </tr>
         <% end %>
     </tbody>
