Added Layout Links

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,8 @@
 <h1>Showing Article Details</h1>
 <!-- to access instance variables in ruby use "<%= %>" -->
 <p><strong>Title: <%= @article.title %></strong></p> 
-<p><strong>Description: <%= @article.description %></strong></p>       
+<p><strong>Description: <%= @article.description %></strong></p>
+
+<%= link_to 'Edit', edit_article_path(@article) %> |
+<%= link_to 'Delete', article_path(@article), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %> |
+<%= link_to 'Return to articles listing', articles_path %> 
