--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
         <tr>
             <th>Title</th>
             <th>Description</th> 
-            <th>Actions</th>
+            <th colspan="3">Actions</th>
         </tr>
     </thead>
 
@@ -16,9 +16,14 @@
                 <td><%= article.description%></td>
 
                 <td><%= link_to 'Show', article_path(article) %></td> 
+                <td><%= link_to 'Edit', edit_article_path(article) %></td>  <!-- edit_article is captured from EDIT in rails routes -->
                  <!-- this will create your http link to delete -->
                 <td><%= link_to 'Delete', article_path(article), data: {turbo_method: :delete, turbo_confirm: "Are you sure?" } %></td> 
             </tr>
         <% end %>
     </tbody>
 </table>
+
+<p>
+    <%= link_to 'Create new article', new_article_path%> <!-- edit_article is captured from EDIT in rails routes -->    
+</p>
