--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
 Hello, I'm home!
 <h1>This is the home page</h1>
+
+<%= link_to 'Articles listing', articles_path %> |
+<%= link_to 'About page', about_path %> 
