--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,6 +5,7 @@
         <tr>
             <th>Title</th>
             <th>Description</th> 
+            <th>User</th> 
             <th colspan="3">Actions</th>
         </tr>
     </thead>
@@ -14,6 +15,7 @@
             <tr>
                 <td><%= article.title %></td> 
                 <td><%= article.description%></td>
+                <td><%= article.user.username if article.user %></td>
 
                 <td><%= link_to 'Show', article_path(article) %></td> 
                 <td><%= link_to 'Edit', edit_article_path(article) %></td>  <!-- edit_article is captured from EDIT in rails routes -->
