--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,4 +7,7 @@
  * depending on specificity.
  *
  * Consider organizing styles into separate files for maintainability.
+ *= require bootstrap
+ *= require_tree .
+ *= require_self
  */
