--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,43 +1,29 @@
-<!-- adding validation checks from module 4.92 -->
-<% if @article.errors.any? %>
-    <h2>The following errors prevented the article from being saved</h2>
-    
-    <!-- ul = unordered list -->
-    <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-           <li> <%= msg %> </li>  <!-- li = list -->
-        <% end %>
-    </ul>    
-<% end %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-10">
+      <%= render 'shared/errors', obj: @article %>
+      <%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded", local: true, data:{ turbo: false }) do |f| %>
+        <div class="form-group row">
+          <%= f.label :title, class: "col-2 col-form-label text-light" %>
+          <div class="col-10">
+            <%= f.text_field :title, class: "form-control shadow rounded", placeholder: "Title of article" %>
+          </div>
+        </div>
 
-<!-- using "local: true only" applies to form_with  -->
-<%= form_with(model: @article, local: true) do |f| %>
-    <p>
-        <%= f.label :title %> <br/>
-        <%= f.text_field :title %>
-    </p>
+        <div class="form-group row">
+          <%= f.label :description, class: "col-2 col-form-label text-light" %>
+          <div class="col-10"> 
+            <%= f.text_area :description, rows: 10, class: "form-control shadow rounded", placeholder: "Description of article" %>
+          </div>
+        </div>
 
-    <p>
-        <%= f.label :description%> <br/>
-        <%= f.text_field :description%>
-    </p> 
-
-    <p>
-        <%= f.submit %>
-    </p> 
-<% end %>
-
-
-<!-- adding validation checks from module 4.92 -->
-<% if @article.errors.any? %>
-    <h2>The following errors prevented the article from being saved</h2>
-    
-    <!-- ul = unordered list -->
-    <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-           <li> <%= msg %> </li>  <!-- li = list -->
-        <% end %>
-    </ul>    
-<% end %>
-
-
+        <div class="form-group row justify-content-center">
+          <%= f.submit class: "btn btn-outline-light btn-lg" %>
+        </div>
+      <% end %>
+    </div>
+    <div class="mb-3">
+      <%= link_to '[ Cancel and return to articles listing ]', articles_path, class: "text-info" %>
+    </div>
+  </div>
+</div>
