--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,7 +11,7 @@
           <div class="card-text text-left"><%= simple_format(@article.description) %></div>
           <% if logged_in? && @article.user == current_user %>
             <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
-            <%= link_to "Delete", article_path(@article), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
+            <%= link_to "Delete", article_path(@article), class: "btn btn-outline-danger", data: { turbo_method: :delete, turbo_confirm: 'Are you sure that you want to delete?'}%>
           <% end %>
         </div>
         <div class="card-footer text-muted">
