--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,8 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <%= link_to "View your profile", user_path(current_user), class: "dropdown-item" %>
               <%= link_to "Edit your profile", edit_user_path(current_user), class: "dropdown-item" %>
-            </li>
+              <%= link_to "Delete profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: {turbo_method: :delete, onclick: "Are you sure you want to delete your profile?" }%>
+              <!-- <%= link_to "Delete profile", user_path(current_user), class: "dropdown-item text-danger", data: {turbo_method: :delete, "turbo-confirm": "Are you sure you want to delete your profile?" } %> -->
             <li class="nav-item">
               <%= link_to 'Log out', logout_path, class: "nav-link", method: :delete %>
             </li>
